--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -133,12 +133,14 @@ android {
     }
 
     defaultConfig {
-        applicationId 'com.xtrendence.cryptofolio'
+        applicationId 'com.centcex.centcex'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0.0"
 		multiDexEnabled true
+        
+        missingDimensionStrategy 'react-native-camera', 'general'
     }
     splits {
         abi {
