--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "Cryptofolio",
-    "slug": "Cryptofolio",
-    "version": "2.2.1",
+    "name": "CENTCEX",
+    "slug": "centcex",
+    "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -18,17 +18,22 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.xtrendence.cryptofolio"
+      "bundleIdentifier": "com.centcex.centcex"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "package": "com.xtrendence.cryptofolio"
+      "package": "com.centcex.centcex"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "48a298a2-063e-49ea-8dae-7c758036eb21"
+      }
     }
   }
 }
