--- a/mobile/android/gradle.properties
+++ b/mobile/android/gradle.properties
@@ -27,5 +27,4 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.54.0
-
-AsyncStorage_db_size_in_MB=100
+expo.jsEngine=jsc
