--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-clipboard/clipboard": "^1.8.2",
-    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "expo": "~40.0.0",
@@ -45,9 +45,8 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
-    "@types/node": "^18.13.0",
     "babel-jest": "~25.2.6",
-    "jest": "^29.4.2",
+    "jest": "~25.2.6",
     "react-test-renderer": "~16.13.1"
   },
   "private": true,
